--- a/final02/mainPage/index.html
+++ b/final02/mainPage/index.html
@@ -29,14 +29,14 @@
                     <div class="tab-content-item" data-id="1">
                         <img src="thptDucHoa.jpg">
                         <button class="btn btn-outline-danger">
-                            <a href="/final02/firstPage/index.html">Click here to see contents</a>
+                            <a href="https://thanhnguyenkhac.github.io/myProject/final02/firstPage/index">Click here to see contents</a>
                         </button>
                     </div>
 
                     <div class="tab-content-item" data-id="2">
                         <img src="thptDucHoa.jpg">
                         <button class="btn btn-outline-danger">
-                            <a href="/final02/secondPage/index.html">Click here to see contents</a>
+                            <a href="https://thanhnguyenkhac.github.io/myProject/final02/secondPage/index">Click here to see contents</a>
                         </button>
                     </div>
                 </div>
